--- a/views/user/ProductView.ejs
+++ b/views/user/ProductView.ejs
@@ -6,32 +6,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ShopPage</title>
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/fonts/iconic/css/material-design-iconic-font.min.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/fonts/iconic/css/material-design-iconic-font.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/fonts/linearicons-v1.0.0/icon-font.min.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/fonts/linearicons-v1.0.0/icon-font.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/animate/animate.css">
 <!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/animsition/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/animsition/css/animsition.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/select2/select2.min.css">
 <!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/daterangepicker/daterangepicker.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/daterangepicker/daterangepicker.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/slick/slick.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/slick/slick.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/MagnificPopup/magnific-popup.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/MagnificPopup/magnific-popup.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/vendor/perfect-scrollbar/perfect-scrollbar.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/perfect-scrollbar/perfect-scrollbar.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/css/util.css">
-	<link rel="stylesheet" type="text/css" href="../shopTemplate/css/main.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/css/util.css">
+	<link rel="stylesheet" type="text/css" href="/shopTemplate/css/main.css">
 <!--===============================================================================================-->
 
 <!-- old template -->
@@ -91,12 +91,12 @@
 	  </nav>
 	<!-- END nav -->
 
-	  <div class="hero-wrap hero-bread " style="background-image: url('../images/bg_6.jpg');">
+	  <div class="hero-wrap hero-bread " style="background-image: url('/images/bg_6.jpg');">
 		<div class="container">
 		  <div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<p class="breadcrumbs"><span class="mr-2"><a href="">Home</a></span> <span>profile</span></p>
-			  <h1 class="mb-0 bread">Profile</h1>
+				<p class="breadcrumbs"><span class="mr-2"><a href="">Home</a></span> <span>productview</span></p>
+			  <h1 class="mb-0 bread">Product View</h1>
 			</div>
 		  </div>
 		</div>
@@ -168,33 +168,42 @@
 									
 		              <div class="select-wrap">
 						
-						<form action="/cart/<%=product._id%>" method="post">
-	                  
-					  <% product?.size.forEach(Size=> { %>
-						<label class="radio p-2">
-						  <span>
-							<%= Size %>
-						  </span> <br>
-						  <input type="radio" name="size" value="<%= Size %> " checked />
-						</label>
-						<% }) %>
-	                
-	                  </select>
-	                       </div>
-		                  </div>
-						</div>
-							
-	          	</div>
-	          	<div class="w-100"></div>
-	          	<div class="col-md-12">
-	    <p style="color: #000;"><%=product.stock %> piece available</p>
-	          	</div>
-          	</div>
-			  <button style="border: none;background: none;" type="submit" value="submit"><a style="width: 10rem;height: 2rem;color: #000;" class="buy-now btn btn-sm btn-primary ">Add To Cart</a></button>
-          	
-    			</div>
-    		</div>
-		</form>
+						<% product?.size.forEach(Size=> { %>
+							<label class="radio p-2">
+							  <span>
+								<%= Size %>
+							  </span> <br>
+							  <input type="radio" name="size" value="<%= Size %>" checked />
+							</label>
+						  <% }) %>
+						  
+						  <a id="addCart<%=product._id%>" onclick="addCart('<%=product._id%>')" style="width: 10rem;height: 2rem;color: #000;cursor:pointer; " >Add To Cart</a>
+						  
+						  <script>
+						  function addCart(productId){
+							const selectedSize = document.querySelector('input[name="size"]:checked').value;
+							const url = window.location.origin;
+							try{
+							  fetch(`${url}/cart?productid=${productId}&size=${selectedSize}`,{
+								method:'POST',
+							  })
+							}catch(err){
+							  console.log(err);
+							  alert('err')
+							}
+						  }
+						  
+						  document.getElementById("addCart<%=product._id%>").addEventListener("click", function () {
+							Swal.fire({
+							  title: 'Added',
+							  text: " Added To Cart",
+							  icon: 'success',
+							  confirmButtonColor: '#3085d6',
+							  confirmButtonText: 'Ok',
+							})
+						  });
+						  </script>
+						  
 		<a href="/wishList/<%=product._id%>" class="buy-now btn btn-sm btn-primary "><button style="border: none;background: none;" ><i class="icon-heart"></i></button></a>
 
 
@@ -364,17 +373,18 @@
 <script src="/https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="/js/google-map.js"></script>
 <script src="/js/main.js"></script>
-<script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- <script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 <!-- new template -->
-<script src="../shopTemplate/vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="/shopTemplate/vendor/jquery/jquery-3.2.1.min.js"></script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/animsition/js/animsition.min.js"></script>
+		<script src="/shopTemplate/vendor/animsition/js/animsition.min.js"></script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/bootstrap/js/popper.js"></script>
-		<script src="../shopTemplate/vendor/bootstrap/js/bootstrap.min.js"></script>
+		<script src="/shopTemplate/vendor/bootstrap/js/popper.js"></script>
+		<script src="/shopTemplate/vendor/bootstrap/js/bootstrap.min.js"></script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/select2/select2.min.js"></script>
+		<script src="/shopTemplate/vendor/select2/select2.min.js"></script>
 		<script>
 			$(".js-select2").each(function(){
 				$(this).select2({
@@ -384,18 +394,18 @@
 			})
 		</script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/daterangepicker/moment.min.js"></script>
-		<script src="../shopTemplate/vendor/daterangepicker/daterangepicker.js"></script>
+		<script src="/shopTemplate/vendor/daterangepicker/moment.min.js"></script>
+		<script src="/shopTemplate/vendor/daterangepicker/daterangepicker.js"></script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/slick/slick.min.js"></script>
-		<script src="../shopTemplate/js/slick-custom.js"></script>
+		<script src="/shopTemplate/vendor/slick/slick.min.js"></script>
+		<script src="/shopTemplate/js/slick-custom.js"></script>
 	<!--===============================================================================================-->
 		<script src="vendor/parallax100/parallax100.js"></script>
 		<script>
 			$('.parallax100').parallax100();
 		</script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/MagnificPopup/jquery.magnific-popup.min.js"></script>
+		<script src="/shopTemplate/vendor/MagnificPopup/jquery.magnific-popup.min.js"></script>
 		<script>
 			$('.gallery-lb').each(function() { // the containers for all your galleries
 				$(this).magnificPopup({
@@ -409,9 +419,9 @@
 			});
 		</script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/isotope/isotope.pkgd.min.js"></script>
+		<script src="/shopTemplate/vendor/isotope/isotope.pkgd.min.js"></script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/sweetalert/sweetalert.min.js"></script>
+		<script src="/shopTemplate/vendor/sweetalert/sweetalert.min.js"></script>
 		<script>
 			$('.js-addwish-b2').on('click', function(e){
 				e.preventDefault();
@@ -449,7 +459,7 @@
 		
 		</script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+		<script src="/shopTemplate/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 		<script>
 			$('.js-pscroll').each(function(){
 				$(this).css('position','relative');
@@ -465,7 +475,12 @@
 				})
 			});
 		</script>
+
+
+<script >
+
+</script>
 	<!--===============================================================================================-->
-		<script src="../shopTemplate/js/main.js"></script>
+		<script src="/shopTemplate/js/main.js"></script>
 </body>
 </html>
