--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -10,33 +10,35 @@
           <h3 class="text-decoration-underline">Coupon management</h3>
         </div>
         <div class="row">
+          <p id="alert" class="text-danger d-flex justify-content-center"></p>
             
         <div class="container mb-5 border border-secondary">
           <div class=" d-flex align-items-center justify-content-center">
             <h5 class="text-decoration-underline">Add coupon</h5>
           </div>
 
-          <form class="mt-3 mb-3" action="/admin/addCoupon" method="post">
+          <form class="mt-3 mb-3" action="/admin/addCoupon" onsubmit="return submitform(Events)" id="form" method="post">
             <div class="d-flex justify-content-between">
 
               <div class="d-flex flex-column">
                 <label>Coupon code</label>
-                <input class="rounded-2" required name="couponName" style="width: 189px; height: 38px;" type="text">
+                <input class="rounded-2" name="couponName" id="couponName" style="width: 189px; height: 38px;" type="text">
               </div>
 
+ 
               <div class="d-flex flex-column">
                 <label>Discount in %</label>
-                <input name="discount" required class="rounded-2" style="width: 189px; height: 38px;" type="text">
+                <input name="discount" class="rounded-2" id="discount" style="width: 189px; height: 38px;" type="number">
               </div>
 
               <div class="d-flex flex-column">
                 <label>Maximum limit</label>
-                <input name="maxLimit" required  class="rounded-2" style="width: 189px; height: 38px;" type="text">
+                <input name="maxLimit"  class="rounded-2" id="maxlimit" style="width: 189px; height: 38px;" type="number">
               </div>
 
               <div class="d-flex flex-column">
                 <label>Expiry date</label>
-                <input type="date" required  class="rounded-2" style="width: 189px; height: 38px;"
+                <input type="date"  class="rounded-2" style="width: 189px; height: 38px;"
                   class="form-control border-secondary" id="exdate" name="expirationTime"
                   aria-describedby="emailHelp" />
               </div>
@@ -89,21 +91,23 @@
                         <div class="modal-content">
                           <div class="modal-header">
                             <h1 class="modal-title fs-5" id="exampleModalLabel">Edit</h1>
+                          
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
-                          <form  action="/admin/editCoupon/<%= element._id %>" method="post">
+                          <p id="alerts" class="text-danger d-flex justify-content-center"></p>
+                          <form  action="/admin/editCoupon/<%= element._id %>"onsubmit="return submitform(EventS)" id="myForm" method="post">
                             <div class="modal-body">
                               <div class="d-flex justify-content-between" >
   
                                 <div class="d-flex flex-column">
                                   <label>Couponcode</label>
-                                  <input class="rounded-2" required   value="<%= element.couponName%>" name="couponName" style="width: 189px; height: 38px;"
+                                  <input class="rounded-2"   value="<%= element.couponName%>" id="CouponName" name="couponName" style="width: 189px; height: 38px;"
                                     type="text">
                                 </div>
   
                                 <div class="d-flex flex-column">
                                   <label>Discount in %</label>
-                                  <input name="discount" required  value="<%=element.discount*100%>" class="rounded-2" style="width: 189px; height: 38px;"
+                                  <input name="discount"  value="<%=element.discount*100%>" id="" class="rounded-2" id="Discount" style="width: 189px; height: 38px;"
                                     type="text">
                                 </div>
   
@@ -112,14 +116,14 @@
                               <div class="d-flex justify-content-between" >
                                 <div class="d-flex flex-column">
                                   <label>Maximum limit</label>
-                                  <input name="maxLimit" required  value="<%= element.maxLimit%>" class="rounded-2" style="width: 189px; height: 38px;"
+                                  <input name="maxLimit"  value="<%= element.maxLimit%>" class="rounded-2" id="Maxlimit" style="width: 189px; height: 38px;"
                                     type="text">
                                 </div>
   
                                 <div class="d-flex flex-column">
                                   <label>Expiry date</label>
-                                  <input type="date" required  class="rounded-2" style="width: 189px; height: 38px;"
-                                    class="form-control border-secondary" value="<%= element.expirationTime%>" id="exdate" name="expirationTime"
+                                  <input type="date"  class="rounded-2" style="width: 189px; height: 38px;"
+                                    class="form-control border-secondary" value="<%= element.expirationTime%>" id="Exdate" name="expirationTime"
                                     aria-describedby="emailHelp" />
                                 </div>
   
@@ -222,6 +226,8 @@
   </div>
   </div>
   </div>
+  <script src="/js/editCouponValidation.js"></script>
+  <script src="/js/couponValidation.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
