--- a/views/admin/productDetails.ejs
+++ b/views/admin/productDetails.ejs
@@ -3,9 +3,7 @@
 <link
   rel="stylesheet"
   href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
-  
 />
-
 
 <!-- PRODUCT DETAILS -->
 <div class="col py-3">
@@ -21,12 +19,15 @@
             <th scope="col">Product Name</th>
             <th scope="col">Price</th>
             <th scope="col">Category</th>
-            <th scope="col">Description</th>
             <th scope="col">Stock</th>
+            <th scope="col">Product </th>
+            <th scope="col"></th>
             <th scope="col">Size</th>
             <th scope="col">Image</th>
             <th scope="col">Actions</th>
-            <th scopr="col"></th>
+            <th scope="col"></th>
+
+            
           </tr>
         </thead>
         <tbody>
@@ -36,12 +37,26 @@
             <td><%=products.name %></td>
             <td><%=products.price%></td>
             <td><%=products?.category?.category_name%></td>
-            <td><%=products.description%></td>
             <td><%=products.stock%></td>
+            <td>
+             <a href="/admin/productView/<%=products._id%>"> <button
+                type="button"
+                class="btn btn-outline-success"
+              >
+                Details
+              </button></a>
+            </td>
+            <td>
+              <a href="/admin/cropImage"> <button
+                type="button"
+                class="btn btn-outline-primary"
+              >
+                Crop image
+              </button></a>
             <td>
               <div
                 class="modal fade"
-                id="s-<%= products._id %>Modal"
+              
                 aria-hidden="true"
                 aria-labelledby="s-<%=products._id %>ModalToggleLabel"
                 tabindex="-1"
@@ -174,8 +189,6 @@
               </button>
               <%}%>
 
-
-
               <!-- Modal Image View -->
               <div
                 class="modal fade"
@@ -187,9 +200,7 @@
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">
-                        Images
-                      </h5>
+                      <h5 class="modal-title" id="exampleModalLabel">Images</h5>
                       <button
                         type="button"
                         class="close"
@@ -209,12 +220,16 @@
                             alt="Image 1"
                             class="me-2"
                             style="width: 80px"
-                            
-                            
                           />
-                          <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#change1<%=products._id %>">
+                          <button
+                            type="button"
+                            class="btn"
+                            data-bs-toggle="modal"
+                            data-bs-target="#change1<%=products._id %>"
+                          >
                             <i class="fa-light fa-pencil"></i>
-                          </button></div>
+                          </button>
+                        </div>
 
                         <div
                           class="d-flex justify-content-center border rounded border-dark p-3 my-2"
@@ -225,8 +240,13 @@
                             class="me-2"
                             style="width: 80px"
                           />
-                          <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#change2<%=products._id %>">
-                            <i class="fas fa-pencil-alt" ></i>
+                          <button
+                            type="button"
+                            class="btn"
+                            data-bs-toggle="modal"
+                            data-bs-target="#change2<%=products._id %>"
+                          >
+                            <i class="fas fa-pencil-alt"></i>
                           </button>
                         </div>
 
@@ -239,8 +259,13 @@
                             class="me-2"
                             style="width: 80px"
                           />
-                          <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#change3<%=products._id %>">
-                            <i class="bx bx-edit-alt me-1" ></i>
+                          <button
+                            type="button"
+                            class="btn"
+                            data-bs-toggle="modal"
+                            data-bs-target="#change3<%=products._id %>"
+                          >
+                            <i class="bx bx-edit-alt me-1"></i>
                           </button>
                         </div>
                       </div>
@@ -259,95 +284,202 @@
               </div>
 
               <!-- The text code -->
-              
-
 
               <!-- Edit image 1 -->
 
-              <div class="modal fade" id="change1<%=products._id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div
+                class="modal fade"
+                id="change1<%=products._id %>"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
                 <div class="modal-dialog">
                   <div class="modal-content">
-                    <form id="changeImage1" action="/admin/changeImage1/<%= products._id %>" method="post"  enctype="multipart/form-data">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Change Image</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <div class="form-outline mb-1">
-                        <label class="form-label" for="typeUsernameX-1">Change Image 1</label>
-                        <input type="file" id="myFile1" class="form-control form-control-lg" name="myFile1" />
-                        <input type="hidden" name="image1" value="<%= products.image1 %>">
+                    <form
+                      id="changeImage1"
+                      action="/admin/changeImage1/<%= products._id %>"
+                      method="post"
+                      enctype="multipart/form-data"
+                    >
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          Change Image
+                        </h5>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                          aria-label="Close"
+                        ></button>
                       </div>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="submit" class="btn btn-primary">Change</button>
-                    </div>
-                   </form>
+                      <div class="modal-body">
+                        <div class="form-outline mb-1">
+                          <label class="form-label" for="typeUsernameX-1"
+                            >Change Image 1</label
+                          >
+                          <input
+                            type="file"
+                            id="myFile1"
+                            class="form-control form-control-lg"
+                            name="myFile1"
+                          />
+                          <input
+                            type="hidden"
+                            name="image1"
+                            value="<%= products.image1 %>"
+                          />
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                          Change
+                        </button>
+                      </div>
+                    </form>
                   </div>
                 </div>
-              </div>  
+              </div>
 
               <!-- Edit image1 ends here -->
 
               <!--Edit image2  -->
 
-              <div class="modal fade" id="change2<%=products._id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div
+                class="modal fade"
+                id="change2<%=products._id %>"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
                 <div class="modal-dialog">
                   <div class="modal-content">
-                    <form id="changeImage1" action="/admin/changeImage2/<%= products._id %>" method="post"  enctype="multipart/form-data">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Change Image</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <div class="form-outline mb-1">
-                        <label class="form-label" for="typeUsernameX-1">Change Image 2</label>
-                        <input type="file" id="myFile2" class="form-control form-control-lg" name="myFile2" />
-                        <input type="hidden" name="image2" value="<%= products.image2 %>">
+                    <form
+                      id="changeImage1"
+                      action="/admin/changeImage2/<%= products._id %>"
+                      method="post"
+                      enctype="multipart/form-data"
+                    >
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          Change Image
+                        </h5>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                          aria-label="Close"
+                        ></button>
                       </div>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="submit" class="btn btn-primary">Change</button>
-                    </div>
-                   </form>
+                      <div class="modal-body">
+                        <div class="form-outline mb-1">
+                          <label class="form-label" for="typeUsernameX-1"
+                            >Change Image 2</label
+                          >
+                          <input
+                            type="file"
+                            id="myFile2"
+                            class="form-control form-control-lg"
+                            name="myFile2"
+                          />
+                          <input
+                            type="hidden"
+                            name="image2"
+                            value="<%= products.image2 %>"
+                          />
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                          Change
+                        </button>
+                      </div>
+                    </form>
                   </div>
                 </div>
-              </div>  
+              </div>
 
               <!-- Edit image2 ends here -->
 
               <!-- Edit image3  -->
 
-              <div class="modal fade" id="change3<%=products._id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div
+                class="modal fade"
+                id="change3<%=products._id %>"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
                 <div class="modal-dialog">
                   <div class="modal-content">
-                    <form id="changeImage1" action="/admin/changeImage3/<%= products._id %>" method="post"  enctype="multipart/form-data">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Change Image</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <div class="form-outline mb-1">
-                        <label class="form-label" for="typeUsernameX-1">Change Image 3</label>
-                        <input type="file" id="myFile3" class="form-control form-control-lg" name="myFile3" />
-                        <input type="hidden" name="image3" value="<%= products.image3 %>">
+                    <form
+                      id="changeImage1"
+                      action="/admin/changeImage3/<%= products._id %>"
+                      method="post"
+                      enctype="multipart/form-data"
+                    >
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          Change Image
+                        </h5>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                          aria-label="Close"
+                        ></button>
                       </div>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="submit" class="btn btn-primary">Change</button>
-                    </div>
-                   </form>
+                      <div class="modal-body">
+                        <div class="form-outline mb-1">
+                          <label class="form-label" for="typeUsernameX-1"
+                            >Change Image 3</label
+                          >
+                          <input
+                            type="file"
+                            id="myFile3"
+                            class="form-control form-control-lg"
+                            name="myFile3"
+                          />
+                          <input
+                            type="hidden"
+                            name="image3"
+                            value="<%= products.image3 %>"
+                          />
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                          Change
+                        </button>
+                      </div>
+                    </form>
                   </div>
                 </div>
-              </div>  
+              </div>
 
               <!-- Edit image ends here -->
-             
-             
-              
+
               <!-- Modal -->
               <div
                 class="modal fade"
@@ -405,21 +537,15 @@
               </div>
             </td>
           </tr>
-          <% count++ %> 
-          <% })%>
+          <% count++ %> <% })%>
         </tbody>
       </table>
     </div>
   </section>
 
-    <!-- image 1 edit modal -->
-    
+  <!-- image 1 edit modal -->
 
-
-    <!-- Button trigger modal -->
-
-   
-
+  <!-- Button trigger modal -->
 
   <script>
     $("#menu-btn").click(function () {
