--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -65,7 +65,9 @@
               <a href="/login" class="nav-link">Login</a>
             </li>
             <% }else { %>
-              <li class="nav-item"><a href="/orderDetails" class="nav-link">Orders</a></li>
+            <li class="nav-item">
+              <a href="/orderDetails" class="nav-link">Orders</a>
+            </li>
             <li class="nav-item">
               <a href="/logout" class="nav-link">Logout</a>
             </li>
@@ -79,7 +81,7 @@
                 ><span class="icon-heart"></span
               ></a>
             </li>
-            
+
             <li class="nav-item cta cta-colored">
               <a href="/profile" class="nav-link"
                 ><span class="icon-user"></span
@@ -96,10 +98,10 @@
     <section id="home-section" class="hero">
       <div class="home-slider owl-carousel">
         <%bannerData.forEach((banner)=> { %>
-          <div class="slider-item js-fullheight">
+        <div class="slider-item js-fullheight">
           <div class="overlay"></div>
           <div class="container-fluid p-0">
-            <% if(bannerData.length){ %> 
+            <% if(bannerData.length){ %>
             <div
               class="row d-md-flex no-gutters slider-text align-items-center justify-content-end"
               data-scrollax-parent="true"
@@ -117,9 +119,7 @@
                   <span class="subheading">#<%=banner.couponName%></span>
                   <div class="horizontal">
                     <h1 class="mb-4 mt-3"><%=banner.offerType%></h1>
-                    <p class="mb-4">
-                      <%=banner.bannerText%>
-                    </p>
+                    <p class="mb-4"><%=banner.bannerText%></p>
 
                     <p><a href="/shop" class="btn-custom">Discover Now</a></p>
                   </div>
@@ -213,7 +213,7 @@
             <div class="product d-flex flex-column">
               <a href="/productView/<%=products._id %>" class="img-prod"
                 ><img
-                  class="img-fluid" 
+                  class="img-fluid"
                   src="<%=products.image3%>"
                   alt="Colorlib Template"
                 />
@@ -239,8 +239,9 @@
                   <p class="price"><span><%=products.price%> </span></p>
                 </div>
                 <p class="bottom-area d-flex px-3">
-                  
-                  <a href="/wishList/<%=products._id%>" class="buy-now text-center py-2"
+                  <a
+                    href="/wishList/<%=products._id%>"
+                    class="buy-now text-center py-2"
                     >ADD TO <span><i class="icon-heart"></i></span
                   ></a>
                 </p>
